2010-08-02  Vadim Kurland  <vadim@vk.crocodile.org>

	* Helper.cpp (findInterfaceByNetzone): fixed #1653 "Crash when
	compiling a rule for Cisco PIX with incorrect network zone".

2010-07-29  Vadim Kurland  <vadim@vk.crocodile.org>

	* instDialog_installer.cpp (instDialog::installerSuccess):
	fixed #1639 "Add success message to the bottom of the process log
	for the installer". Added a message to the installer log to
	display installation status.

	* stop_action: "stop" action should reset ipv4 iptables
	configuration only if firewall object configuration defines any
	ipv4 rules. This is how generated script works for ipv6; behavior
	for ipv4 and ipv6 should be similar. Fixes SF bug #3036541 "IPV6
	only firewall resets ipv4 stack"

	* script_skeleton (cmd): added action "block" to the "usage" string
	of the generated iptables script

2010-07-28  Vadim Kurland  <vadim@vk.crocodile.org>

	* PolicyCompiler_ipt.cpp (checkActionInMangleTable::processNext):
	fixed SF bug 3034628 "iptables does not allow target REJECT in
	mangle table". Iptables does not support target REJECT in mangle
	table. Added check to the policy compiler to make it detect this
	situation and issue an error.

	* FWWindow.cpp (FWWindow::compile): fixed SF bug 3035426 "canceled
	save writes .fwb ". The program created file with name ".fwb" if
	user started with an empty project paje, created some objects, then
	hit "Compile" but then clicked "Cancel" when offered a chance to
	save objects into a new data file.

	* CompilerDriver.cpp (CompilerDriver::_findImportedRuleSetsRecursively):
	fixed #1631 "Process branch rule sets recursively". Policy
	compilers used to look only one level deep while processing
	branching rules.  They should allow for arbitrary nesting and
	correctly avoid infinite loops if user creates looped branches.
	Compiler issues a warning when it detects looped bracnhing.
	This fixes SF bug 3033462 "nested shared branch rules between
	servers not working".
